kubernetes/infra-core/traefik/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http-prod
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-traefik-forward-auth@kubernetescrd
  name: traefik-admin-ingress
spec:
  rules:
  - host: traefik.k8s.net.duck.moe
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik
            port:
              name: traefik
  tls:
  - hosts:
    - traefik.k8s.net.duck.moe
    secretName: traefik-admin-cert
